--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </div>
     
                 <div class="menue-four">
-                    <img src="../img/image7.png" alt="" height="115px" width="115px">
+                    <img src="./img/image7.png" alt="" height="115px" width="115px">
                     <div class="menu-four-text">
                         <h4>Rice Plain</h4>
                         <p>Lorem,Ipsum,has & been</p>
